[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/textures/miscs/missile.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/global/HomingMissile.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/miscs/explosion-1.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/missile_launch.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/missile_explode.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 3 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.498442, 1 )
colors = PoolColorArray( 0.6875, 0.109016, 0.0805664, 1, 0.791532, 0.341351, 0.124602, 0.887117, 0.886275, 0.824265, 0.164706, 0.784314 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.690909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 0.5, 1.5, 1 )
flag_disable_z = true
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.2
angular_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 2.0
scale = 1.2
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [  ],
"loop": true,
"name": "init",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "explode",
"speed": 7.0
} ]

[node name="HomingMissile" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0
one_shot = true
autostart = true

[node name="LaunchSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="ExplodeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -7.456, 0.017539 )
rotation = -3.14159
amount = 50
speed_scale = 1.5
randomness = 0.2
local_coords = false
process_material = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 14 )
animation = "init"
[connection signal="body_entered" from="." to="." method="_on_HomingMissile_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
